 (Format: Year/Month/Day)
Changes for 1.0.1:
*07/12/11:
   * Only allow one menu to be open at a time (Mark)
     FbTk/Menu.cc/hh
*07/12/09:
   * Added OnTitlebar and Double modifiers to the keys file for clicks on the
     titlebar and double clicks, respectively (Mark, thanks Matteo Galiazzo)
     - For example, `OnTitlebar Double Mouse3 :Maximize' will maximize a window
       when you double click on the titlebar with the right mouse button
     - Note: if you have commands bound to both a single and double click, the
       single click command will still be executed on the first half of a double
       click
     - Added new key commands ShadeOn and ShadeOff that set whether or not a
       window is shaded, rather than toggling the current state
       Window.cc Keys.cc/hh FbCommandFactory.cc
*07/11/22:
   * Added some new special keys to the keys file: FocusIn, FocusOut, MouseOver,
     MouseOut, ChangeWorkspace (Mark)
     - FocusIn/FocusOut correspond to a window gaining or losing focus, e.g. the
       following will raise all xterms when one gains focus:
       FocusIn :If {Matches (xterm)} {Raise (xterm)} {}
     - MouseOver/MouseOut correspond to the mouse moving over the window or
       toolbar (when used with OnToolbar) -- OnDesktop not yet supported, e.g.
       the following will unshade a window when you move your mouse over it with
       alt pressed:
       Mod1 MouseOver :If {Matches (shaded=yes)} {Shade} {}
     - ChangeWorkspace corresponds to the workspace being changed, e.g. the
       following will set a different wallpaper for each workspace:
       ChangeWorkspace :Exec fbsetbg ~/.fluxbox/bg$(xprop -root _NET_CURRENT_DESKTOP | awk '{print $3}').png
     Keys.cc Window.cc Screen.cc Toolbar.cc
   * Added translations for zh_TW (thanks Wei-Lun Chao)
   * Fix division by 0 error when resize increments are set to 0 by an
     application, bug #1836182
     WinClient.cc
   * Added conditional statements to key commands (Mark)